Australia/Indonesia/East Timor
The creation of East Timor as an existing country in game, around 15 events for it, ideas for it, decisions for it, and started a loc file for it.
Had to adjust things in Indonesian content for it such as their events, focuses, and loc file. Also worked on Australia a bit. East Timor also
got a little bit added to its subideology parties, fixed a Norway loc misspelling, fixed the wrong party index being written in the Iraq tree,
added a Governo Timor-Leste UN Council portrait approved by Sheep, changed up East Timor's political leaders file, edited yearly events
to have events for it set off, went into the US tree and added a country flag called USA_enduring_freedom_begun for Australia content
purposes.

--- a/localisation/english/MD_countries_cosmetic_l_english.yml
+++ b/localisation/english/MD_countries_cosmetic_l_english.yml
@@ -2170,6 +2170,11 @@
  GER_fourth_reich_DEF: "The Fourth Reich"
  GER_fourth_reich_ADJ: "Reich"
 
+ #East Timor stuff
+ TIM_UN: "International Force East Timor"
+ TIM_UN_DEF: "International Force East Timor"
+ TIM_UN_ADJ: "East Timorese"
+
  #Swiss Stuff
  SWI_alpine_republic: "Alpine Republic"
  SWI_alpine_republic_ADJ: "Alpine"
