--- a/localisation/english/MD_focus_NOR_l_english.yml
+++ b/localisation/english/MD_focus_NOR_l_english.yml
@@ -82,9 +82,9 @@
  NOR_food_safety_regulations_desc: "Many of the previously much needed policies of food should be implemented for our reformation of the ministry to be successful."
  NOR_pesticide_distribution: "Pesticide Distribution"
  NOR_pesticide_distribution_desc: "We never thought this would be a problem in our climate, but Norway may be under attack...by insects."
- NOR_forsavet: "Forsavet"
+ NOR_forsavet: "Forsvaret"
  NOR_forsavet_desc: "The bravery and adaptability of great armed forces are ready to defend against any danger, night and day. They are trained for all conditions and know their mission, to protect the Norwegian people for their continued peace and liberty."
- NOR_sjorforsvaret: "Sjorforsvaret"
+ NOR_sjorforsvaret: "Sjørforsvaret"
  NOR_sjorforsvaret_desc: "The main purpose of our navy is to protect the interest of our trade, although it isn't challenge very often. We still require a deterrence force to command the seas that we have a right to."
  NOR_haakonsvern_naval_base: "Haakonsvern Naval Base"
  NOR_haakonsvern_naval_base_desc: "Haakonsvern, the main base for the Norwegian fleet, requires an extensive renovation as it is not up to the standards to serve our people effectively anymore."
@@ -92,7 +92,7 @@
  NOR_fleet_logistics_command_desc: "We have received word that our navy has been using the resources under its command inefficiently. This will be heavily looked into, we cannot be having any waste in our armada."
  NOR_norwegian_naval_academy: "Norwegian Naval Academy"
  NOR_norwegian_naval_academy_desc: "It is clear that we cannot have incompetence at the helm of the first defense of Norway"
- NOR_haeren: "Haeren"
+ NOR_haeren: "Hæren"
  NOR_haeren_desc: "The Norwegian Army is the land warfare service branch of the Norwegian Armed Forces. The Army ground force is the oldest of the Norwegian service branches, established as a modern military organization under the command of the King of Norway"
  NOR_quality_over_quantity: "Quality Over Quantity"
  NOR_quality_over_quantity_desc: "We have always been known for our no nonsense production mindset, every task is carried out with care, there is no room for sloppiness in Norway!"
