--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -8111,11 +8111,26 @@
  TIM.socialism_2007_desc: ""
  TIM.Communist-State: "£generic_Communist_State_small Socialist Party of Timor"
  TIM.Communist-State_desc: ""
+ #Fretilin
  TIM.neutral_Social: "£generic_neutral_Social_small Fretilin"
- TIM.neutral_Social_desc: ""
+ TIM.neutral_Social_desc: "Founded in 1974 as a splinter group of the ASDT, it is a popular center-left political party that did a lot of the fighting for the resistance during Indonesia's occupation."
+ #ASDT
+ TIM.ASDT_neutral_Social: "£generic_neutral_Social_small Associação Social-Democrata Timorense"
+ TIM.ASDT_neutral_Social_desc: "The ASDT, also known as the Timorese Social Democratic Association, was one of the strongest parties fighting for East Timorese independence since back in 1974. Due to internal conflict, they had a splinter group "
+ ###End of Timor neutral social###
  TIM.anarchist_communism: "£generic_anarchist_communism_small Frenti-Mudanca"
  TIM.anarchist_communism_desc: ""
+ #Regular Timor neutral autocrat
+ TIM.Neutral_Autocracy: "£generic_Neutral_Autocracy_small Non-aligned Autocrats"
+ TIM.Neutral_Autocracy_icon: "£generic_Neutral_Autocracy_small"
+ TIM.Neutral_Autocracy_desc: "Autocracy refers to a broad spectrum of non-democratic, authoritarian ideologies where all power is placed in the hands of a single ruler."
+ #UN Timor neutral autocrat
+ TIM.Neutral_Autocracy_UNTAET: "£generic_Neutral_Autocracy_small The United Nations Transitional Administration in East Timor"
+ TIM.Neutral_Autocracy_UNTAET_icon: "£generic_Neutral_Autocracy_small" #£TIM_UNTAET
+ TIM.Neutral_Autocracy_UNTAET_desc: "Also known as UNTAET - Was a special diplomatic mission established by none other than the United Nations in October 1999 to restore peace in East Timor and oversee their accession into the international community."
+ ###End of Timor neutral autocrat###
  TIM.Neutral_conservatism: "£generic_Neutral_conservatism_small Christian Democratic Union of Timor"
+ TIM.Neutral_conservatism_icon: "£generic_Neutral_conservatism_small"
  TIM.Neutral_conservatism_desc: ""
  TIM.Nat_Populism: "£generic_Nat_Populism_small Timorese Nationalist Party"
  TIM.Nat_Populism_desc: ""
