--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -658,20 +658,20 @@
  PAP_nationalist_DEF: "Papua New Guinea"
  PAP_nationalist_ADJ: "Papua New Guinean"
 
- TIM_fascism: "Timor Leste"
- TIM_fascism_DEF: "Timor Leste"
- TIM_democratic: "Timor Leste"
- TIM_democratic_DEF: "Timor Leste"
- TIM_neutrality: "Timor Leste"
- TIM_neutrality_DEF: "Timor Leste"
- TIM_communism: "Timor Leste"
- TIM_communism_DEF: "Timor Leste"
+ TIM_fascism: "Timor-Leste"
+ TIM_fascism_DEF: "Timor-Leste"
+ TIM_democratic: "Timor-Leste"
+ TIM_democratic_DEF: "Timor-Leste"
+ TIM_neutrality: "Timor-Leste"
+ TIM_neutrality_DEF: "Timor-Leste"
+ TIM_communism: "Timor-Leste"
+ TIM_communism_DEF: "Timor-Leste"
  TIM_fascism_ADJ: "East Timorese"
  TIM_democratic_ADJ: "East Timorese"
  TIM_neutrality_ADJ: "East Timorese"
  TIM_communism_ADJ: "East Timorese"
- TIM_nationalist: "Timor Leste"
- TIM_nationalist_DEF: "Timor Leste"
+ TIM_nationalist: "Timor-Leste"
+ TIM_nationalist_DEF: "Timor-Leste"
  TIM_nationalist_ADJ: "East Timorese"
 
  IND_fascism: "Caliphate of Indonesia"
