--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -1,4 +1,4 @@
-#By Marmite and Iranian Maggot
+﻿#By Marmite and Iranian Maggot
 l_english:
  australia_focus: "Australia Focus Tree"
 #Decision
@@ -81,10 +81,10 @@ l_english:
  australia_md.24.d2: "At 11pm on the Indonesian island of Bali, three bombs were detonated. Two explosions rattled the tourist nightlife hotspot on Kuta Beach and a third blast occurred in front of the American consulate nearby. Nearly half the deaths were Australians, making up 88 of the 202 fatalities. In response, Prime Minister John Howard spoke, 'let us wrap our arms around, not only our fellow Australians, but our arms around the people of Indonesia.'"
  australia_md.24.o1: "The Australian spirit has not been broken"
  australia_md.25.o1: "And the radical jihadis win again..."
- australia_md.25.t: "Flight MH17 Shot Down"
- australia_md.25.d: "Reports are coming in that Malaysia Airlines Flight MH17, flying from Amsterdam to Kuala Lumpur has been shot down while flying over Ukraine. 33 Australian citizens are among the 298 passengers and crew, none survived. US intelligence officials believe that the plane was shot down by a surface-to-air missile."
- australia_md.25.o1: "There must be an investigation!"
- australia_md.25.o2: "Who could have done this?"
+ australia_md.2500.t: "Flight MH17 Shot Down"
+ australia_md.2500.d: "Reports are coming in that Malaysia Airlines Flight MH17, flying from Amsterdam to Kuala Lumpur has been shot down while flying over Ukraine. 33 Australian citizens are among the 298 passengers and crew, none survived. US intelligence officials believe that the plane was shot down by a surface-to-air missile."
+ australia_md.2500.o1: "There must be an investigation!"
+ australia_md.2500.o2: "Who could have done this?"
  australia_md.26.t: "Who Blew Up MH17?"
  australia_md.26.d: "In conjunction with the Dutch, Ukrainians and Malaysians a Joint Investigation Team has confirmed that the missile that shot down MH17 was fired from a Russian-made Buk missile launcher. The missile was fired from an area controlled by Russian-backed separatists in eastern Ukraine. The Russian government has denied any involvement in the incident. Footage taken by the rebels has been released on the internet sparking outrage in the international community."
  australia_md.26.o1: "So it was the Russians!?"
