--- a/localisation/english/MD_money_l_english.yml
+++ b/localisation/english/MD_money_l_english.yml
@@ -678,7 +678,7 @@
  bankruptcy.214.a: "Damn"
  bankruptcy.214.b: "Launch a counter-campaign"
  bankruptcy.215.t: "[oligarchism_L] Politician Criticises Spending"
- bankruptcy.215.d: "'The government is spending all our valuable tax money on frivolous things. They should tighten the budget and prioritise spending to support local businesses. And I'm not saying this because I'm a legitimate businessman myself, but because my friends and voters are legitimate businessmen too...'\n\nThe words of a [oligarchism_L_L] politican are greeted by cheers from the crowd at a business convention. Our poor financial situation works as the perfect tool for opposition parties to gather support."
+ bankruptcy.215.d: "'The government is spending all our valuable tax money on frivolous things. They should tighten the budget and prioritise spending to support local businesses. And I'm not saying this because I'm a legitimate businessman myself, but because my friends and voters are legitimate businessmen too...'\n\nThe words of a [oligarchism_L] politican are greeted by cheers from the crowd at a business convention. Our poor financial situation works as the perfect tool for opposition parties to gather support."
  bankruptcy.215.a: "Damn"
  bankruptcy.215.b: "Launch a counter-campaign"
  bankruptcy.216.t: "[Neutral_Libertarian_L] Politician Criticises Spending"
