ISR focus filters

--- a/localisation/english/replace/replaced_from_focus_filter_tag_l_english.yml
+++ b/localisation/english/replace/replaced_from_focus_filter_tag_l_english.yml
@@ -111,3 +111,9 @@
  FOCUS_FILTER_ARMY_XP: "Army Experience"
  FOCUS_FILTER_NAVY_XP: "Navy Experience"
  FOCUS_FILTER_AIR_XP: "Air Experience"
+#Israel
+FOCUS_FILTER_ISRFOREIGNPOL: "Israel's Foreign Policy"
+FOCUS_FILTER_ISRMILITARY: "Tzahal-IDF"
+FOCUS_FILTER_ISRPALSTUFF: "Israel-Palestine"
+FOCUS_FILTER_ISRPOLICE: "Mišteret Yisra'el"
+FOCUS_FILTER_ISRECON: "Israeli Economy"
