Added Australia bushfire events

--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -80,11 +80,10 @@ l_english:
  australia_md.24.d1: "At 11pm on the Indonesian island of Bali, three bombs were detonated. Two explosions rattled the tourist nightlife hotspot on Kuta Beach and a third blast occurred in front of the American consulate nearby. Nearly half the deaths were Australians, making up 88 of the 202 fatalities. This will be remembered as the day that terror darkened the hearts of Australians."
  australia_md.24.d2: "At 11pm on the Indonesian island of Bali, three bombs were detonated. Two explosions rattled the tourist nightlife hotspot on Kuta Beach and a third blast occurred in front of the American consulate nearby. Nearly half the deaths were Australians, making up 88 of the 202 fatalities. In response, Prime Minister John Howard spoke, 'let us wrap our arms around, not only our fellow Australians, but our arms around the people of Indonesia.'"
  australia_md.24.o1: "The Australian spirit has not been broken"
- australia_md.25.o1: "And the radical jihadis win again..."
- australia_md.2500.t: "Flight MH17 Shot Down"
- australia_md.2500.d: "Reports are coming in that Malaysia Airlines Flight MH17, flying from Amsterdam to Kuala Lumpur has been shot down while flying over Ukraine. 33 Australian citizens are among the 298 passengers and crew, none survived. US intelligence officials believe that the plane was shot down by a surface-to-air missile."
- australia_md.2500.o1: "There must be an investigation!"
- australia_md.2500.o2: "Who could have done this?"
+ australia_md.25.t: "Flight MH17 Shot Down"
+ australia_md.25.d: "Reports are coming in that Malaysia Airlines Flight MH17, flying from Amsterdam to Kuala Lumpur has been shot down while flying over Ukraine. 33 Australian citizens are among the 298 passengers and crew, none survived. US intelligence officials believe that the plane was shot down by a surface-to-air missile."
+ australia_md.25.o1: "There must be an investigation!"
+ australia_md.25.o2: "Who could have done this?"
  australia_md.26.t: "Who Blew Up MH17?"
  australia_md.26.d: "In conjunction with the Dutch, Ukrainians and Malaysians a Joint Investigation Team has confirmed that the missile that shot down MH17 was fired from a Russian-made Buk missile launcher. The missile was fired from an area controlled by Russian-backed separatists in eastern Ukraine. The Russian government has denied any involvement in the incident. Footage taken by the rebels has been released on the internet sparking outrage in the international community."
  australia_md.26.o1: "So it was the Russians!?"
@@ -92,6 +91,20 @@ l_english:
  australia_md.2600.t: "Flight MH17 Accusations"
  australia_md.2600.d: "A Dutch-Australian Joint Investigation Team has confirmed that the missile that shot down flight MH17 in Ukraine a couple months ago, was fired from a Russian-made Buk missile launcher. Furthermore, footage has been found on the internet of the Russian speaking rebels responsible posing amidst the wreckage."
  australia_md.2600.o1: "Must've fallen off the back of a truck"
+ australia_md.27.t: "Black Summer Bushfires"
+ australia_md.27.d: "This summer saw the worst bushfires in Australian history. Over 46 million acres of land were burned to ash. There were hundreds of human deaths attributed to burning alive and smoke inhalation. Perhaps the greatest toll was taken by the 3 billion animals that were killed or displaced, significantly impacting biodiversity and pushing some species closer to extinction. Tragic images of animals burned and escaping the fires have touched the hearts of the world. Thousands of homes were destroyed as well as infrastructure and communities. Climate change has greatly contributed to the intensity and frequency of these deadly fires."
+ australia_md.27.o1: "Those poor koalas!"
+ australia_md.27.o2: "We need more measures to prevent this."
+ australia_md.28.t: "Major Bushfires"
+ australia_md.28.d1: "This summer brought with it serious bushfires which have swept through rural Australia and destroyed many homes and other buildings. Tragically lives were lost and family's across the country are mourning."
+ australia_md.28.d2: "This summer brought with it serious bushfires which have swept through rural Australia and destroyed a few homes and other buildings. Our preparations have prevented the worst case scenario and we've been able to keep the fires under control."
+ australia_md.28.o1: "Oh the humanity!"
+ australia_md.28.o2: "We were prepared."
+ australia_md.29.t: "Bushfires"
+ australia_md.29.d1: "Flames are breaking out across the country causing damage to buildings and infrastructure. The fires have been difficult to control, but everyone in the affected areas have been safely evacuated."
+ australia_md.29.d2: "Flames are breaking out across the country. Our preparations have meant that there's been no serious damage and people have been evacuated safely from the affected areas."
+ australia_md.29.o1: "This is a terrible!"
+ australia_md.29.o2: "This is great news!"
 
 #Tooltips
  CHI_influece_greater_influ_20_tt: "Our influence on Australia is greater than 20 (Current: [?THIS.AST_CHI_trade_influence])"
@@ -112,6 +125,10 @@ l_english:
  AST_afghanistan_TT: "Our §Yboys§! are shipped off to [AFG.GetFlag]§GAfghanistan§!"
  AST_liberation_front_TT: "A great §Rterror§! must first shake our people before they will §Gapprove§! of our men embarking on §Ycrusades! of §Gjustice§@ across our §Yregion§!."
  AST_need_USA_support_TT: "In order to send our troops to [AFG.GetFlag] §GAfghanistan§!, the [USA.GetFlag] §3United States§! must first §Gapprove§! of this as they are the key voice of the §Yinternational community§!."
+ AST_black_summer_bushfire_damage_effect_tt1: "§YThe Black Summer Bushfires§! have caused §Yvery serious damage§! to our country. The §Y[AST.Neutral_green_L_icon] [Neutral_green_L]§! ([?party_pop_array^17|Y2%]) will gain §Gsome support§! from the increased awareness of the effects of climate change."
+ AST_black_summer_bushfire_damage_effect_tt2: "§YThe Black Summer Bushfires§! have caused §Yvery serious damage§! to our country. §R33§! of our citizens have §Rdied§!. The §Y[AST.Neutral_green_L_icon] [Neutral_green_L]§! ([?party_pop_array^17|Y2%]) will gain §Gsignificant support§! from the increased awareness of the effects of climate change and the implementation of policy that aligns with their platform."
+ AST_major_bushfire_damage_effect_tt: "§YMajor Bushfires§! have caused §Rsignificant damage§! to our country and some of our §Rcitizens have died§!."
+ AST_minor_bushfire_damage_effect_tt: "§YBushfires§! have caused §Ysome damage§! to our country."
 
 #Tech Boosts
  AST_anzac-class: "Anzac-Class Advancements"
@@ -248,6 +265,8 @@ l_english:
  AST_green_subsidies_desc: ""
  AST_expadning_wind_farms: "Expanding Wind Farms"
  AST_expadning_wind_farms_desc: ""
+ AST_idea_national_bushfire_strategy: "National Bushfire Strategy"
+ AST_ides_national_bushfire_strategy_desc: "The country has implemented a national bushfire strategy to minimise the loss of life and damage caused by severe bushfires. With better equipment, planning and training, the country is better prepared than most to deal with the rising threat of bushfires."
 
 
 
